k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: constructora
  labels:
    app.kubernetes.io/name: constructora-namespace
    environment: production
